--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-import React, { useState } from 'react';
+import React, { useState, useEffect } from 'react';
 import { Image as ImageIcon, Upload, Download, RefreshCw, Sparkles, Terminal, Coffee, Check, AlertCircle, Zap, BrainCircuit, Binary, Monitor } from 'lucide-react';
 
 const apiKey = ""; // API key is injected by the environment at runtime
@@ -56,6 +56,7 @@ export default function App() {
   const drawWatermark = (base64Str) => {
     return new Promise((resolve) => {
       const img = new Image();
+      img.crossOrigin = "anonymous";
       img.onload = () => {
         const canvas = document.createElement('canvas');
         canvas.width = img.width;
